# pkg/sources/activities/types/types.go
@@ -25,5 +25,26 @@ type ActivitySummary struct {
 
 type DecoratedActivity struct {
 	Activity
-	Summary *ActivitySummary
+	Summary    *ActivitySummary
+	Embedding  []float32
+	Similarity float32
+}
+
+type SortBy string
+
+const (
+	SortBySimilarity SortBy = "similarity"
+	SortByDate       SortBy = "created_date"
+)
+
+type SearchRequest struct {
+	QueryEmbedding []float32
+	// MinSimilarity filters out entries with lower vector embedding similarity
+	MinSimilarity float32
+	// SourceUIDs ignored if empty
+	SourceUIDs []string
+	// Limit maximum number of results to return
+	Limit int
+	// SortBy specifies the field to sort results by (similarity or date)
+	SortBy SortBy
 }
